--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+    border:1px dashed #ccc;
   }
   
   /* .image */
@@ -100,4 +101,8 @@ input[type="file" i] {
 .container > .result {
 
     display: flex; 
+}
+
+.container > .result-table {
+    color: white;
 }
